RESOLVED FIXED123517
Remote Layer Tree: Lots of ASSERT(m_children.isEmpty()); on Poster Circle
https://bugs.webkit.org/show_bug.cgi?id=123517
Summary Remote Layer Tree: Lots of ASSERT(m_children.isEmpty()); on Poster Circle
Tim Horton
Reported 2013-10-30 11:12:02 PDT
A recently added assertion discovered a bug where our dependence on undefined behavior in CA was causing the layer tree to get into a bad state. We depend on adding a sublayer which already has a parent to another layer, the sublayer is first removed from its parent layer. CA headers say this is undefined behavior (that layers should always have a nil superlayer when being added as a sublayer), but we heavily depend on it being the case. Most of PlatformCALayerRemote behaved correctly, but setSublayers() failed to unparent the incoming layers.
Attachments
patch (1.35 KB, patch)
2013-10-30 11:14 PDT, Tim Horton
no flags
no reason not to fold it into the existing loop (1.43 KB, patch)
2013-10-30 11:50 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2013-10-30 11:14:17 PDT
Tim Horton
Comment 2 2013-10-30 11:50:24 PDT
Created attachment 215542 [details] no reason not to fold it into the existing loop
Tim Horton
Comment 3 2013-10-30 11:58:06 PDT
Note You need to log in before you can comment on or make changes to this bug.