Remote Layer Tree: Lots of ASSERT(m_children.isEmpty()); on Poster Circle https://bugs.webkit.org/show_bug.cgi?id=123517

Reviewed by Simon Fraser.

* WebProcess/WebPage/mac/PlatformCALayerRemote.cpp:
(PlatformCALayerRemote::setSublayers):
When setting our list of sublayers, remove all of the new layers from
their parents first.


Canonical link: https://commits.webkit.org/141665@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158297 268f45cc-cd09-0410-ab3c-d52691b4dbfc